# uefi-rs

./: Cargo.toml
src/: prelude.rs
src/data_types/: chars.rs  mod.rs  strs.rs
src/proto/console/text/: output.rs
src/proto/media/file/: info.rs  mod.rs
uefi-services/: Cargo.toml
uefi-test-runner/: Cargo.toml  README.md  build.py  run.sh
uefi-test-runner/src/: main.rs  prelude.rs  ring_tests.rs  support_no_std.rs  unit_test.rs
uefi-test-runner/test_proc_macro/: Cargo.toml
uefi-test-runner/test_proc_macro/src/: lib.rs
x86_64/: OVMF_CODE.fd
